# 3D-VSoC-demonstrator

./: .gitignore  .travis.yml  README  README.md
Algorithm_OpenCV/: CMakeLists.txt
Algorithm_OpenCV/src/: config.cpp  config.h  detection.h  factory.cpp  factory.h  main.cpp  structures.cpp  structures.h
Software/: CMakeLists.txt
Software/src/: ADC.cpp  ADC.h  Analog_ACC.cpp  Analog_ACC.h  CPU_2.cpp  CPU_2.h  CPU_Bayer.cpp  CPU_Bayer.h  GlobalConfiguration.cpp  GlobalConfiguration.h  ImageData.cpp  ImageData.h  ImageFactory.cpp  ImageFactory.h  Initiator.cpp  Initiator.h  Interconnect.cpp  Interconnect.h  SIMD.cpp  SIMD.h  SensorReader.cpp  SensorReader.h  Target.cpp  Target.h  Top.cpp  Top.h  TransmissionInterface.h  VSoC.cpp  VSoC.h  main.cpp
serializer_minimal_working_example/: CMakeLists.txt
serializer_minimal_working_example/src/: main.cpp  structures.cpp  structures.h
